# Rusted-Wumpus

./: .env.example  .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  clippy.sh
.circleci/: config.yml
.github/workflows/: rust.yml
.migrations/: 20230215182417_users.sql
entity/src/: mod.rs  prelude.rs  quote.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_users.rs  m20230216_062018_pgcrypto.rs  m20230216_062852_qutoe_id_function.rs  m20230216_063045_qutoe.rs
migrations/: 20230215182232_pgcrypto.sql  20230215182312_quote_id_function.sql  20230215182437_quotes.sql  20230216232611_user_is_admin.sql
src/: main.rs  vars.rs
src/commands/: admin.rs  apis.rs  mod.rs  quotes.rs
src/lib/: checks.rs  lib.rs  structs.rs  types.rs  utils.rs
