[[bin]]
name = "rusted_wumpus"
path = "src/main.rs"

[lib]
name = "rusted_wumpus_lib"
path = "src/lib/lib.rs"

[package]
name = "rusted_wumpus"
version = "0.0.1"
edition = "2021"
readme = "README.md"
authors = ["BuyMyMojo <https://github.com/BuyMyMojo>"]
repository = "https://github.com/BuyMyMojo/Rusted-Wumpus"
license-file = "LICENSE"
keywords = ["discord", "bot"]
description = "A general discord bot made in rust as a personal learning experince"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
chrono = "0.4.19"
poise = "0.5.2"
quote = "1.0.18"
serde_json = "1.0.81"
reqwest = "0.11.10"
serde = "1.0.137"
html2text = "0.4.5"
owoify = "0.1.5"
# redis = "0.22.3"
clap = { version = "4.1.4", features = ["derive", "env"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres" ] }
dotenv = { version = "0.15.0", features = ["clap"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tracing-unwrap = "0.10.0"


[features]
default = ["postgres", "testing"]
postgres = []
testing = []

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[profile.release-thin]
inherits = "release"
opt-level = 3
lto = "thin"
